@@ -519,6 +519,20 @@ tools::assertWarning(subset(data.frame(y = 1), y = 2), verbose = TRUE)
 ## R < 4.3.0 was silent about unused ... arguments
 
 
+## a:b -- both should be of length 1  -- PR#18419
+Sys.getenv("_R_CHECK_LENGTH_COLON_") -> oldV
+Sys.setenv("_R_CHECK_LENGTH_COLON_" = "true")# ~> the future behavior
+a <- 1:2
+assertErrV(a:1) # numerical expression has length > 1
+assertErrV(2:a) #  "         "          "      "
+Sys.unsetenv("_R_CHECK_LENGTH_COLON_")
+tools::assertWarning(s1 <- a:1, verbose=TRUE)
+tools::assertWarning(s2 <- 2:a, verbose=TRUE)
+stopifnot(identical(s1, 1L), identical(s2, 2:1))
+Sys.setenv("_R_CHECK_LENGTH_COLON_" = oldV)# reset
+## always only warned in R <= 4.2.z
+
+
 
 ## keep at end
 rbind(last =  proc.time() - .pt,
